--- a/CSS/site.css
+++ b/CSS/site.css
@@ -1,30 +1,28 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
 html {
     background-color: #393838;
+    overflow-x: hidden;
 }
 
-main {
-    position: relative;
-    background-color: #393838;
-    top: 7vw;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    width: 80vw;
-}
-
-.main-header {
-    position: fixed;
-    top: 0px;
-    z-index: 1;
+#main-header {
     background-color: #f7d6ad;
-    border-top-style: none;
-    border-bottom-style: solid;
-    border-color: darkslategray;
-    border-width: 2px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    margin-left: 10vw;
-    margin-right: 10vw;
-    width: 80vw; 
+    display: grid;
+    grid-template-columns: 0.5fr 2fr 4fr 2fr;
+    grid-template-rows: 2fr 1fr;
+    align-items: center;
+    justify-items: center;
+    height: 10vh;
+    width: 80vw;
+    position: fixed;
+    z-index: 3;
+    top: 0px;
+    left: 10vw;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 @keyframes shakeLogo {
@@ -36,49 +34,43 @@ main {
     100% {transform: translate(1px, 2px) rotate(-1deg);}
 }
 
-.main-header img {
-    margin-left: 1vw;
-    height: 45px;
+#site-logo {
+    height: 40px;
 }
 
-.main-header img:hover {
+#site-logo:hover {
     animation: shakeLogo 0.5s;
 }
 
-.header-container {
-    width: 80vw; 
-}
-
-.header-container h1{
-    display: inline;
-    margin-left: 1.5vw;
+#main-header h1{
+    grid-column: 2 / 4;
     font-size: 3rem;
+    justify-self: start;
     color: darkred;
     transition: color 0.5s ease-out;
 }
 
-.header-container h1:hover {
+#main-header h1:hover {
     color: red;
 }
 
-.header-container h2{
-    display: inline-block;
+#main-header h2{
+    grid-column: 4;
+    align-self: end;
     position: relative;
-    left: 50%;
+    left: 3vw;
     color: darkred;
     transition: color 0.5s ease-out;
 }
 
-.header-container h2:hover {
+#main-header h2:hover {
     color: red;
-}
-
-.header-container img{
-    vertical-align: -8px;
 }
 
 nav {
+    grid-column: 1 / 5;
     text-align: center;
+    width: 80vw;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -86,8 +78,7 @@ nav {
 .nav-button {
     cursor: pointer;
     font-weight: 600;
-    padding-right: 10vw;
-    padding-left: 10vw;
+    width: 20vw;
     border-radius: 4px;
     border: none;
     background-color: #f7d6ad;
@@ -106,7 +97,50 @@ nav {
     color: #faf9f9;
 }
 
-h1,h2,h4,p,li {
+#mobile-phone-nbr {
+    background-color: #f7d6ad;
+    height: 3vh;
+    width: 100vw;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+#mobile-phone-nbr h1 {
+    color: darkred;
+    font-size: 1.5rem;
+}
+
+#mobile-phone-nbr h1:hover {
+    color: red;
+}
+
+main {
+    margin-bottom: 2vh;
+    min-height: 76vh;
+    display: grid;
+    justify-items: center;
+    z-index: -1;
+}
+
+#aboutPizza { 
+    margin-left: 4vw;
+}
+
+#imgAndMedia > #video {
+    display: block;
+    width: 560px;
+    margin-top: 2vh;
+}
+
+#imgAndMedia > img {
+    display: block;
+    width: 560px;
+    margin-top: 2vh;
+}
+
+h1,h2,h3,h4,p,li {
     color: #faf9f9;
 }
 
@@ -118,32 +152,40 @@ a:visited {
     color: rgb(124, 77, 233);
 }
 
-section > img {
-    width: 560px;
+ul {
+    list-style-type: none;
 }
 
-.main-footer {
+#main-footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     justify-items: center;
     align-items: center;
-    padding-top: 20vh;
     padding-bottom: 1vh;
     margin-left: 10vw;
     margin-right: 10vw;
     width: 80vw;
-    height: 20vh;
+    height: 10vh;
     background-color: #f7d6ad;
     border-top-style: solid;
     border-bottom-style: solid;
     border-width: 2px;
     border-radius: 10px;
     border-color: lightslategray;
+    border-bottom: none;
 }
 
+#jobs > a, #about > a, #cookies > a {
+    font-size: 1.5em;
+}
+
+#logo-lower {
+    justify-self: start;
+    margin-left: 2vw;
+}
 #logo-lower img {
-    height: 5vw;
+    height: 50px;
 }
 
 #logo-lower img:hover {
@@ -153,32 +195,210 @@ section > img {
 
 #logo-lower {
     grid-column: 1;
-    grid-row: 3;
-}
-
-#jobs {
-    align-self: end;
-}
-
-#about {
-    align-self: end;
-}
-
-#cookies {
-    align-self: end;
+    grid-row: 2;
 }
 
 .copyright {
-    grid-row: 3;
+    grid-row: 2;
     grid-column: 3;
+    justify-self: end;
+    margin-right: 2vw;
 }
 
 .copyright > p {
-    position: relative;
     font-size: 1.2em;
     color: #000000;
 }
 
 #contact-photo {
     width: 20vw;
+}
+
+@media only screen and (max-width: 599px) {
+    #main-header {
+        grid-template-columns: 0.5fr 2fr 3fr 3fr;
+        width: 100vw;
+        position:fixed;
+        left: 0px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+
+    #main-header h1{
+        grid-column: 2 / 5;
+        font-size: 2rem;
+        justify-self: center;
+        position: relative;
+        right: 4.5vw;
+    }
+
+    #main-header h2{
+        font-size: xx-small;
+        visibility: hidden;
+    }
+
+    #mobile-phone-nbr {
+        visibility: visible;
+        position: fixed;
+        margin-top: 10vh;
+    }
+
+    nav {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        position: relative;
+        bottom: 1vh;
+        width: 100vw;
+    }
+    
+    .nav-button {
+        width: 100%;
+        height: 4vh;
+        font-size: 0.9rem;
+        background-color: #e2b988;
+        border-style: solid;
+        border-color: #be9c72;
+        border-width: 1px;
+        justify-self: center;
+        border-radius: 0px;
+    }
+
+    #home-btn {
+        grid-column: 1 / 5;
+    }
+
+    #reviews-btn {
+        grid-column: 5 / 9;
+    }
+
+    #contact-btn {
+        grid-column: 9 / 13;
+    }
+
+    main {
+        margin-left: 0px;
+        position: relative;
+        top: 15vh;
+    }
+
+    main > #aboutPizza {
+        margin-left: 4vw;
+        margin-right: 4vw;
+    }
+    
+    #imgAndMedia > #video {
+        width: 90vw;
+    }
+    
+    #imgAndMedia > img {
+        width: 90vw;
+    }
+
+    #main-footer {
+        width: 100vw;
+        margin-left: 0px;
+        border-radius: 0px;
+        position: relative;
+        top: 15vh;
+    }
+
+    .copyright > p {
+        font-size: 0.8em;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    
+    #main-header {
+        grid-template-columns: 0.5fr 2fr 3fr 3fr;
+        width: 100vw;
+        left: 0px;
+        border-bottom-left-radius: 0px;
+        border-bottom-right-radius: 0px;
+    }
+
+    #main-header > h1 {
+        justify-self: start;
+        margin-left: 2vw;
+    }
+
+    #main-header > h2 {
+        justify-self: center;
+        font-size: 1.5em;
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    .nav-button {
+        width: 32vw;
+    }
+
+    main {
+        margin-top: 10vh;
+        margin-left: 0px;
+    }
+
+    #main-footer {
+        width: 100vw;
+        margin-left: 0px;
+        border-radius: 0px;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+
+    #main-header {
+        width: 80vw;
+        left: 10vw;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
+    }
+    
+    #main-header h1{
+        justify-self: start;
+        margin-left: 1vw;
+    }
+
+    #main-header h2{
+        justify-self: center;
+        font-size: 1.6em;
+    }
+    
+    nav {
+        width: 80vw;
+    }
+    
+    .nav-button {
+        width: 20vw;
+    }
+    
+    main {
+        margin-top: 8vh;
+        justify-items: start;
+        margin-left: 10vw;
+    }
+
+    article, section, main > img {
+        margin-left: 4vw;
+    }
+
+
+    #imgAndMedia > #video {
+        width: 700px;
+        margin-left: 4vw;
+    }
+    
+    #imgAndMedia > img {
+        width: 700px;
+        margin-left: 4vw;
+    }
+    
+    #main-footer {
+        margin-left: 10vw;
+        width: 80vw;
+        border-top-left-radius: 10px; 
+        border-top-right-radius: 10px;   
+    }
 }
